--- a/sass/partials/_content.scss
+++ b/sass/partials/_content.scss
@@ -426,6 +426,8 @@
     }
 
     .change-password-form {
+      
+      margin-top: 1rem;
       display: flex;
       flex-flow: column;
       gap: 1.2rem;
