--- a/sass/partials/_single-player-info.scss
+++ b/sass/partials/_single-player-info.scss
@@ -21,11 +21,14 @@
     .back-button{
         position: relative;
     }
+    header{
+        position: sticky;
+        top: 0;
+    }
     main{
         display: flex;
         flex-flow: column nowrap;
         justify-content: center;
-        align-items: center;
         
     }
     
