--- a/sass/partials/variables/_colors.scss
+++ b/sass/partials/variables/_colors.scss
@@ -5,7 +5,13 @@ $color_footer_nav_link: #12317F;
 $color_footer_nav_hover:  #FF9364;
 $footer-background: #F0F0F3;
 
+
+footer{
+    // color: cornsilk
+}
 // background color 
+$html-back: whitesmoke;
+$body-back:white;
 $color-main-bg: #F0F0F3; 
 $color-secondary-bg: #E5E5E5;
 
