--- a/style.css
+++ b/style.css
@@ -577,9 +577,9 @@ img {
 /* Location-Selection ================================================= */
 .location-selection {
   background-color: #F0F0F3;
-  max-width: 800px;
-  min-height: 100vh;
+  max-width: 500px;
   margin: auto;
+  min-height: 100vh;
   font-family: "Poppins", sans-serif;
   /* IMPORTANT */
 }
@@ -1390,6 +1390,7 @@ img {
   font-size: 1.2em;
 }
 .user-account-wrapper .accordions-wrapper .change-password-form {
+  margin-top: 1rem;
   display: flex;
   flex-flow: column;
   gap: 1.2rem;
@@ -1829,8 +1830,12 @@ a {
 }
 
 /* Layout ================================================= */
-.player-invite-page {
-  background-color: #F0F0F3;
+html {
+  background-color: whitesmoke;
+}
+
+body {
+  background-color: white;
 }
 
 /* Home-page ================================================= */
@@ -1855,7 +1860,7 @@ body.home {
   /* Main */
 }
 body.home .promotion {
-  background-color: #ECF1FF;
+  background-color: #ecf1ff;
 }
 body.home img,
 body.home svg {
@@ -1875,13 +1880,13 @@ body.home .brand-title h1 {
   font-size: 1.5rem;
   font-family: "Damion";
   font-weight: 700;
-  color: #FF4D00;
+  color: #ff4d00;
   margin-top: 0.5rem;
   margin: 0;
 }
 body.home .brand-title h1 span {
   font-family: "Raleway";
-  color: #12317F;
+  color: #12317f;
 }
 body.home .hero-section {
   position: relative;
@@ -1900,7 +1905,7 @@ body.home .user-display h2 {
   margin-bottom: 0.5rem;
   font-size: 1.9rem;
   font-weight: 500;
-  color: #12317F;
+  color: #12317f;
 }
 body.home .user-display p {
   font-size: 0.9rem;
@@ -1943,7 +1948,7 @@ body.home .sport-card:nth-of-type(1) {
   background: radial-gradient(circle, #6cc8a6 40%, #e9fff3 41%);
 }
 body.home .sport-card:nth-of-type(2) {
-  background: radial-gradient(circle, #8FCCF9 40%, #CDF3FF 41%);
+  background: radial-gradient(circle, #8fccf9 40%, #cdf3ff 41%);
 }
 body.home .sport-card:nth-of-type(3) {
   background: radial-gradient(circle, #f2746d 40%, #ffd5d2 41%);
@@ -2128,6 +2133,8 @@ body.home footer li {
 }
 
 .user-level {
+  max-width: 500px;
+  margin: auto;
   font-family: poppins, helvetica, arial, sans-serif;
   background-color: white;
   min-height: 100vh;
@@ -2141,6 +2148,9 @@ body.home footer li {
 .user-level header .title {
   font-size: 1.5em;
   font-weight: bold;
+}
+.user-level header .back-button {
+  position: relative;
 }
 .user-level main {
   display: flex;
@@ -2166,6 +2176,7 @@ body.home footer li {
   padding: 1.5rem;
   border-radius: 10px;
   box-shadow: 6px 10px 22px -7px rgba(0, 0, 0, 0.58);
+  cursor: pointer;
   text-transform: uppercase;
 }
 .user-level .level:nth-of-type(1) {
@@ -2185,6 +2196,8 @@ body.home footer li {
 
 #chat-history-page {
   background-color: white;
+  max-width: 500px;
+  margin: auto;
   max-width: 500px;
   margin: auto;
   display: flex;
@@ -2309,11 +2322,15 @@ body.home footer li {
 .single-player-info .back-button {
   position: relative;
 }
+.single-player-info header {
+  position: -webkit-sticky;
+  position: sticky;
+  top: 0;
+}
 .single-player-info main {
   display: flex;
   flex-flow: column nowrap;
   justify-content: center;
-  align-items: center;
 }
 .single-player-info .player-detail-content-wrapper {
   display: flex;
@@ -2501,6 +2518,8 @@ body.home footer li {
 
 /* Chat-History========================================= */
 .challenge-invite-page {
+  max-width: 500px;
+  margin: auto;
   min-height: 100vh;
   display: flex;
   flex-flow: column nowrap;
